# trpl_learning

./: README.md
collection/exercise2/: Cargo.toml
collection/exercise2/src/: main.rs
collection/exercise3/: Cargo.toml
collection/exercise3/src/: main.rs
collection/test1/: Cargo.toml
collection/test1/src/: main.rs
common_concepts/: Cargo.toml
common_concepts/src/: main.rs
crate_root/: Cargo.toml
enum_and_patternmatching/: Cargo.toml
enum_and_patternmatching/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
generic/: Cargo.toml
generic/src/: main.rs
guessing/: Cargo.toml
guessing/src/: main.rs
hashmap/: Cargo.toml
hashmap/src/: main.rs
how_to_write_a_test/: Cargo.toml
how_to_write_a_test/src/: lib.rs
how_to_write_a_test/tests/: intergation_test.rs
lifetime/: Cargo.toml
lifetime/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
module_system/: Cargo.toml
module_system/doc/: module_system.md
module_system/src/: lib.rs
mutiple_files/: Cargo.toml
mutiple_files/src/: front_of_house.rs  lib.rs
organize_data_by_struct/: Cargo.toml
organize_data_by_struct/src/: main.rs
ownership/: Cargo.toml
ownership/doc/: ownership.md
ownership/src/: main.rs
panic_and_error/: Cargo.toml
panic_and_error/src/: main.rs
string/: Cargo.toml
string/src/: main.rs
test_module/: Cargo.toml
test_module/src/: lib.rs
test_module/tests/: intergration_test.rs
using_trait/: Cargo.toml
using_trait/src/: lib.rs  main.rs
vector/: Cargo.toml
vector/src/: main.rs
(+1 files in other folders)
